# app.js
@@ -17,8 +17,13 @@ const swaggerFile = require('./swagger-output.json');
 // Swagger UI 경로 설정
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
-const userRouter = require('./routes/users');
+const usersRouter = require('./routes/users');
 app.use("/users",
     // #swagger.tags = ['USER']
-    userRouter);
+    usersRouter);
+
+const groupsRouter = require('./routes/groups');
+app.use("/groups",
+  //  #swagger.tags = ['GROUP']
+  groupsRouter);
 
